# thrift

./: .gitignore  CMakeLists.txt  NEWS.rst  README.rst  buildbot.py  resolve.json  waf  wscript
.github/workflows/: build.yml  cmake.yml  docker.yml
compiler/thrift/: version.h
lib/thrift/: config.h
src/thrift/: config.h
test/: Service.cpp  Service.h  Service_constants.cpp  Service_constants.h  Service_types.cpp  Service_types.h  StressTest_constants.cpp  StressTest_constants.h  StressTest_types.cpp  StressTest_types.h
test/cpp/src/: Service.cpp  Service.h  StressTest_types.h
